--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -80,7 +80,7 @@
 			<key>DiscardHibernateMap</key>
 			<false/>
 			<key>EnableSafeModeSlide</key>
-			<true/>
+			<false/>
 			<key>EnableWriteUnprotector</key>
 			<true/>
 			<key>ForceBooterSignature</key>
@@ -209,6 +209,24 @@
 				<true/>
 				<key>ExecutablePath</key>
 				<string>Contents/MacOS/SMCSuperIO</string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>MinKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+			</dict>
+			<dict>
+				<key>Arch</key>
+				<string>Any</string>
+				<key>BundlePath</key>
+				<string>NVMeFix.kext</string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>ExecutablePath</key>
+				<string>Contents/MacOS/NVMeFix</string>
 				<key>MaxKernel</key>
 				<string></string>
 				<key>MinKernel</key>
@@ -490,7 +508,7 @@
 			<key>EnablePassword</key>
 			<false/>
 			<key>ExposeSensitiveData</key>
-			<integer>3</integer>
+			<integer>7</integer>
 			<key>HaltLevel</key>
 			<integer>2147483648</integer>
 			<key>PasswordHash</key>
@@ -498,9 +516,9 @@
 			<key>PasswordSalt</key>
 			<data></data>
 			<key>ScanPolicy</key>
-			<integer>590083</integer>
+			<integer>2687747</integer>
 			<key>SecureBootModel</key>
-			<string>Default</string>
+			<string>Disabled</string>
 			<key>Vault</key>
 			<string>Optional</string>
 		</dict>
@@ -545,7 +563,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C027502704NJ0PG8C</string>
+			<string>C02653310J9J0PG1F</string>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>ROM</key>
@@ -557,9 +575,9 @@
 			<key>SystemProductName</key>
 			<string>iMac18,3</string>
 			<key>SystemSerialNumber</key>
-			<string>C02VTAZGJ1GJ</string>
+			<string>C02T1XYFJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>24AE61BF-C766-4C26-A87A-DD8FCFA32681</string>
+			<string>E21AA2B7-2B84-4ECB-9EDB-EB0E4ADD6C7D</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
@@ -578,7 +596,7 @@
 			<key>BoardProduct</key>
 			<string>Mac-BE088AF8C5EB4FA2</string>
 			<key>BoardSerialNumber</key>
-			<string>C027502704NJ0PG8C</string>
+			<string>C02653310J9J0PG1F</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
@@ -588,7 +606,7 @@
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>C02VTAZGJ1GJ</string>
+			<string>C02T1XYFJ1GJ</string>
 			<key>ChassisType</key>
 			<integer>13</integer>
 			<key>ChassisVersion</key>
@@ -612,9 +630,9 @@
 			<key>SystemSKUNumber</key>
 			<string>System SKU#</string>
 			<key>SystemSerialNumber</key>
-			<string>C02VTAZGJ1GJ</string>
+			<string>C02T1XYFJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>24AE61BF-C766-4C26-A87A-DD8FCFA32681</string>
+			<string>E21AA2B7-2B84-4ECB-9EDB-EB0E4ADD6C7D</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
