--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -452,11 +452,11 @@
 			<key>LauncherPath</key>
 			<string>Default</string>
 			<key>PickerAttributes</key>
-			<integer>0</integer>
+			<integer>1</integer>
 			<key>PickerAudioAssist</key>
 			<false/>
 			<key>PickerMode</key>
-			<string>Builtin</string>
+			<string>External</string>
 			<key>PickerVariant</key>
 			<string>Auto</string>
 			<key>PollAppleHotKeys</key>
@@ -566,7 +566,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02726104QXJ0PGA8</string>
+			<string>C02740108J9J0PGFB</string>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>ROM</key>
@@ -578,9 +578,9 @@
 			<key>SystemProductName</key>
 			<string>iMac18,3</string>
 			<key>SystemSerialNumber</key>
-			<string>C02TX0ZTJ1GJ</string>
+			<string>C02VHDYLJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>0B93F9FB-65B9-45D1-BA46-FC5A4676439E</string>
+			<string>F8AD8D11-3EE5-4934-AC99-D2BE61B43BE1</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
@@ -599,7 +599,7 @@
 			<key>BoardProduct</key>
 			<string>Mac-BE088AF8C5EB4FA2</string>
 			<key>BoardSerialNumber</key>
-			<string>C02726104QXJ0PGA8</string>
+			<string>C02740108J9J0PGFB</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
@@ -609,7 +609,7 @@
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>C02TX0ZTJ1GJ</string>
+			<string>C02VHDYLJ1GJ</string>
 			<key>ChassisType</key>
 			<integer>13</integer>
 			<key>ChassisVersion</key>
@@ -633,9 +633,9 @@
 			<key>SystemSKUNumber</key>
 			<string>System SKU#</string>
 			<key>SystemSerialNumber</key>
-			<string>C02TX0ZTJ1GJ</string>
+			<string>C02VHDYLJ1GJ</string>
 			<key>SystemUUID</key>
-			<string>0B93F9FB-65B9-45D1-BA46-FC5A4676439E</string>
+			<string>F8AD8D11-3EE5-4934-AC99-D2BE61B43BE1</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
@@ -728,6 +728,16 @@
 				<true/>
 				<key>Path</key>
 				<string>OpenRuntime.efi</string>
+			</dict>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>OpenCanopy.efi</string>
 			</dict>
 		</array>
 		<key>Input</key>
